==> roboter/Hardware/STM32/32F3DISCOVERY_F303/DZX-IAR-OpenSource-v18.2.1/Source/MCU/STM32F4xx/mcu_i2c.c <==
#include "mcu_i2c.h"
#include "mcu_irq.h"
#include "mcu_cfg.h"
#include "mcu_rcc.h"

STATUS I2C_Open(I2C* port, BYTE number, UINT32 clk)
{
    INTERRUPTLOCK lock;
    STATUS status;
    UINT32 ticks;


#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Create(&port->mutex,                     /* Create an underlying mutex to support claiming exclusive access */
                          "I2C",
                          FALSE);             
    
    if (status != SUCCESS) {                                /* Was there an error? */
        return status;                                      /* Yes, bubble up the error */
    }

    switch (number) {                                       /* By port number, power-on, select clock and enable NVIC interrupt */
        case 1:
            port->REG = REG_I2C1;
            
            
            ACQUIREINTERRUPTLOCK();
            REGBITS_RCCAPB1ENR.I2C1EN = 1;
            RELEASEINTERRUPTLOCK();
            
            IRQ_RegisterHandler(IRQ_I2C1_EV, I2C_IRQ);
            IRQ_RegisterHandler(IRQ_I2C1_ER, I2C_IRQ);
            IRQ_Enable(IRQ_I2C1_EV);
            IRQ_Enable(IRQ_I2C1_ER);
            break;
        case 2:
            port->REG = REG_I2C2;
            
            ACQUIREINTERRUPTLOCK();
            REGBITS_RCCAPB1ENR.I2C2EN = 1;
            RELEASEINTERRUPTLOCK();
            
            IRQ_RegisterHandler(IRQ_I2C2_EV, I2C_IRQ);
            IRQ_Enable(IRQ_I2C2_EV);
            break;
        case 3:
            port->REG = REG_I2C3;
            
            ACQUIREINTERRUPTLOCK();
            REGBITS_RCCAPB1ENR.I2C3EN = 1;
            RELEASEINTERRUPTLOCK();
            
            IRQ_RegisterHandler(IRQ_I2C3_EV, I2C_IRQ);
            IRQ_Enable(IRQ_I2C3_EV);
            break;
        default:
            return ERR_NOTSUPPORTED;
    }
    
    SIGNAL_Init(&port->signals);

    port->REG->CR1.BITS.SWRST = 1;
    port->REG->CR1.BITS.SWRST = 0;
    
    port->REG->CR1.BITS.SMBUS = 0;                          /* Configure for I2C mode (not SMBus mode) */
    port->REG->CR2.BITS.FREQ = MCU_APB1ClockHz() / 1000000; /* Assign the current APB1 clock frequency */
    
    ticks = (MCU_APB1ClockHz() / clk) >> 0;
    port->REG->CCR.BITS.CCR = ticks;
    port->REG->CCR.BITS.FS = 1;
    
    port->REG->CR1.BITS.PE = 1;
    port->REG->CR2.BITS.ITEVTEN = 1;                        /* Enable event interrupts */
    port->REG->CR2.BITS.ITBUFEN = 1;                        /* Enable buffer interrupts */
    port->REG->CR2.BITS.ITERREN = 1;                        /* Enable error interrupts */
  
    port->number = number - 1;                              /* Assign the port number */
    mcu_i2c[number - 1] = port;                             /* Keep a reference to the port for later access */
    
    return SUCCESS;
}

STATUS I2C_Close(I2C* port)
{
    INTERRUPTLOCK lock;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
    
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif

    ACQUIREINTERRUPTLOCK();
    
    if (port != mcu_i2c[port->number]) {
        RELEASEINTERRUPTLOCK();
        return ERR_NOTINITIALIZED;
    }

    switch (port->number) {
        case 0:
            IRQ_Disable(IRQ_I2C1_EV);
            break;
         case 1:
            IRQ_Disable(IRQ_I2C2_EV);
            break;
        case 2:
            IRQ_Disable(IRQ_I2C3_EV);
            break;
        default:
            RELEASEINTERRUPTLOCK();
            return ERR_NOTSUPPORTED;
    }

    mcu_i2c[port->number] = NULL;
    
    RELEASEINTERRUPTLOCK();
    return SUCCESS;
}

STATUS I2C_Read(I2C* port, BYTE address, void* buf, UINT32 nbytes, UINT32 timeout)
{
    INTERRUPTLOCK lock;
    STATUS status;


#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (buf == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif

    ACQUIREINTERRUPTLOCK();

    if (mcu_i2c[port->number] != port) {
        RELEASEINTERRUPTLOCK();
        return ERR_NOTINITIALIZED;
    }
    
    RELEASEINTERRUPTLOCK();
    
    status = MUTEX_Acquire(&port->mutex, timeout);                  /* Ensure exclusive access to the port */
    if (status != SUCCESS) {
        return status;
    }

    port->address = (address | 0x1);
    port->data = buf;
    port->nbytes = nbytes;
    port->idx = 0;
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);

    port->REG->CR1.BITS.START = 1;                                  /* Issue a start condition */

    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);     /* Wait for the IRQ to complete the transfer */
    
    MUTEX_Release(&port->mutex);                                    /* Release the claim on the port */
    
    if (status != SUCCESS) {
        return status;                                              /* Failed while waiting for the interrupt to complete */
    }

    return port->status;                                            /* Return the result from the interrupt routine */
}

STATUS I2C_Write(I2C* port, BYTE address, const void* data, UINT32 nbytes, UINT32 timeout)
{
    INTERRUPTLOCK lock;
    STATUS status;


#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
    
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
    
    if (data == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
   
    ACQUIREINTERRUPTLOCK();
    
    if (mcu_i2c[port->number] != port) {
        RELEASEINTERRUPTLOCK();
        return ERR_NOTINITIALIZED;
    }
    
    RELEASEINTERRUPTLOCK();
    
    status = MUTEX_Acquire(&port->mutex, timeout);              /* Ensure exclusive access to the port */
    if (status != SUCCESS) {
        return status;
    }
    
    port->address = (address & 0xFE);                           /* Take the slave device address without the read/write bit */
    port->data = (void*)data;                                   /* Keep a pointer to the data to be transmitted */
    port->nbytes = nbytes;
    port->idx = 0;
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);

    port->REG->CR1.BITS.START = 1;                              /* Issue a start condition */
    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);
    
    MUTEX_Release(&port->mutex);                                /* Release the claim on the port */
    
    if (status != SUCCESS) {
        return status;                                          /* Failed while waiting for the interrupt to complete */
    }
    
    return port->status;                                        /* Return the result from the interrupt routine */
}

static void I2C_IRQ(IRQ irq)
{
    I2C* port;
    static volatile I2CSR1BITFIELD st1;
    static volatile I2CSR2BITFIELD st2;
    
    
    switch (irq) {
        case IRQ_I2C1_EV:
        case IRQ_I2C1_ER:
            port = mcu_i2c[0];
            break;
        case IRQ_I2C2_EV:
        case IRQ_I2C2_ER:
            port = mcu_i2c[1];
            break;
        case IRQ_I2C3_EV:
        case IRQ_I2C3_ER:
            port = mcu_i2c[2];
            break;
    }
    
    st1 = port->REG->SR1.BITS;
    st2 = port->REG->SR2.BITS;
    
    if (st1.SB) {
        port->REG->DR = port->address;
    } else if (st1.ADDR) {
        
        if (st2.TRA) {
            port->REG->DR = ((BYTE*)port->data)[port->idx++];
        } else {
            if (port->nbytes > 1) {
                port->REG->CR1.BITS.ACK = 1;
            } else {
                port->REG->CR1.BITS.ACK = 0;
                port->REG->CR1.BITS.STOP = 1;
            }
        }
    } 
    
    else if (st1.TXE) {
        if (port->idx < port->nbytes) {
            port->REG->DR = ((BYTE*)port->data)[port->idx++];      /* Send another data byte */
        } else {
            port->REG->CR1.BITS.STOP = 1;                            /* Transmit completed */
            port->status = SUCCESS;
            SIGNAL_Set(&port->signals, SIGNAL_0);
        }
    }
    
    else if (st1.RXNE) {
        ((BYTE*)port->data)[port->idx++] = port->REG->DR;
        
        if (port->idx >= port->nbytes) {
            port->REG->CR1.BITS.STOP = 1;                            /* Receive completed */
            port->status = SUCCESS;
            SIGNAL_Set(&port->signals, SIGNAL_0);
        } else {
            if (port->idx < (port->nbytes - 1)) {
                port->REG->CR1.BITS.ACK = 1;                        /* More bytes to receive; return ACK */
            } else {
                port->REG->CR1.BITS.ACK = 0;                        /* Last byte to receive; return NAK */
                port->REG->CR1.BITS.STOP = 1;
            }
        }
    } else {
        port->REG->SR1.VALUE = 0;
        port->REG->CR1.BITS.STOP = 1;
        
        
        if (st1.AF) {
            port->status = ERR_DEVICENAK;
        } else {
            port->status = ERR_INCOMPLETE;
        }
        
        SIGNAL_Set(&port->signals, SIGNAL_0);
    }
}
