==> roboter/Hardware/STM32/32F3DISCOVERY_F303/DZX-IAR-OpenSource-v18.2.1/Source/MCU/LPC43xx/mcu_i2c.c <==
#include "mcu_i2c.h"
#include "mcu_cfg.h"
#include "mcu_irq.h"
#include "mcu_scu.h"

STATUS I2C_Open(I2C* port, BYTE number, UINT32 clk)
{
    INTERRUPTLOCK lock;
    STATUS status;
    UINT32 ticks;


#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
    
    status = MUTEX_Create(&port->mutex,                     /* Create an underlying mutex to support claiming exclusive access */
                          "I2C",
                          FALSE);             
    
    if (status != SUCCESS) {                                /* Was there an error? */
        return status;                                      /* Yes, bubble up the error */
    }
    
    SIGNAL_Init(&port->signals);

    switch (number) {                                       /* By port number, power-on, select clock and enable NVIC interrupt */
        case 0:
            port->REG = REG_I2C0;
            
            ACQUIREINTERRUPTLOCK();
            
            REGBITS_SFSI2C0.SCLEZI = 1;
            REGBITS_SFSI2C0.SDAEZI = 1;
            
            IRQ_RegisterHandler(IRQ_I2C0, I2C_IRQ);
            IRQ_Enable(IRQ_I2C0);
            
            RELEASEINTERRUPTLOCK();
            break;
        case 1:
            port->REG = REG_I2C1;
            
            ACQUIREINTERRUPTLOCK();

            IRQ_RegisterHandler(IRQ_I2C1, I2C_IRQ);
            IRQ_Enable(IRQ_I2C1);
            
            RELEASEINTERRUPTLOCK();
            break;
        default:
            return ERR_NOTSUPPORTED;
    }
   
    port->REG->CONCLR = 0x6C;                               /* Initialize all flags cleared */

    ticks = (CFG_CPUCLOCKHZ / (clk)) >> 1;    /* Calculate the half clock cycle (50% duty) in time ticks */
    port->REG->SCLH = ticks;
    port->REG->SCLL = ticks;
    port->REG->CONSET = 0x40;                               /* Enable the I2C interface */

    port->number = number;                                  /* Assign the port number */
    mcu_i2c[number] = port;                                 /* Keep a reference to the port for later access */
    
    return SUCCESS;
}

STATUS I2C_Close(I2C* port)
{
    INTERRUPTLOCK lock;
    
    
#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
    
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif

    ACQUIREINTERRUPTLOCK();
    
    if (port != mcu_i2c[port->number]) {
        RELEASEINTERRUPTLOCK();
        return ERR_NOTINITIALIZED;
    }

    switch (port->number) {
        case 0:
            IRQ_Disable(IRQ_I2C0);
            REGBITS_SFSI2C0.SCLEZI = 0;
            REGBITS_SFSI2C0.SDAEZI = 0;
            break;
         case 1:
            IRQ_Disable(IRQ_I2C1);
            break;
        default:
            RELEASEINTERRUPTLOCK();
            return ERR_NOTSUPPORTED;
    }

    mcu_i2c[port->number] = NULL;
    
    RELEASEINTERRUPTLOCK();
    return SUCCESS;
}

STATUS I2C_Read(I2C* port, BYTE address, void* buf, UINT32 nbytes, UINT32 timeout)
{
    INTERRUPTLOCK lock;
    STATUS status;


#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }

    if (buf == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif

    ACQUIREINTERRUPTLOCK();

    if (mcu_i2c[port->number] != port) {
        RELEASEINTERRUPTLOCK();
        return ERR_NOTINITIALIZED;
    }
    
    RELEASEINTERRUPTLOCK();
    
    status = MUTEX_Acquire(&port->mutex, timeout);                  /* Ensure exclusive access to the port */
    if (status != SUCCESS) {
        return status;
    }
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);

    port->address = (address | 0x1);
    port->data = buf;
    port->nbytes = nbytes;
    port->idx = 0;

    port->REG->CONCLR = 0x2C;
    port->REG->CONSET = 0x20;                                       /* Issue a start condition */

    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);     /* Wait for the IRQ to complete the transfer */
    
    MUTEX_Release(&port->mutex);                                    /* Release the claim on the port */
    
    if (status != SUCCESS) {
        return status;                                              /* Failed while waiting for the interrupt to complete */
    }

    return port->status;                                            /* Return the result from the interrupt routine */
}

STATUS I2C_Write(I2C* port, BYTE address, const void* data, UINT32 nbytes, UINT32 timeout)
{
    INTERRUPTLOCK lock;
    STATUS status;


#if (CFG_CONTEXTCHECKING)
    if (KERNEL_IsISR()) {
        return ERR_INVALIDCONTEXT;
    }
#endif
    
#if (CFG_NULLCHECKING)
    if (port == NULL) {
        return ERR_NULLREFERENCE;
    }
    
    if (data == NULL) {
        return ERR_NULLREFERENCE;
    }
#endif
   
    ACQUIREINTERRUPTLOCK();
    
    if (mcu_i2c[port->number] != port) {
        RELEASEINTERRUPTLOCK();
        return ERR_NOTINITIALIZED;
    }
    
    RELEASEINTERRUPTLOCK();
    
    status = MUTEX_Acquire(&port->mutex, timeout);              /* Ensure exclusive access to the port */
    if (status != SUCCESS) {
        return status;
    }
    
    SIGNAL_Clear(&port->signals, SIGNAL_0);
    
    port->address = (address & 0xFE);                           /* Keep the target device address (minus the read/write bit) */
    port->data = (void*)data;                                   /* Keep a pointer to the data to be transmitted */
    port->nbytes = nbytes;
    port->idx = 0;

    port->REG->CONCLR = 0x2C;
    port->REG->CONSET = 0x20;                                   /* Issue a start condition */
    
    status = SIGNAL_WaitOne(&port->signals, SIGNAL_0, timeout);
    
    MUTEX_Release(&port->mutex);                                /* Release the claim on the port */
    
    if (status != SUCCESS) {
        return status;                                          /* Failed while waiting for the interrupt to complete */
    }
    
    return port->status;                                        /* Return the result from the interrupt routine */
}

static void I2C_IRQ(IRQ irq)
{
    I2C* port;
    
    
    port = mcu_i2c[irq - IRQ_I2C0];
    
    switch (port->REG->STAT) {
        case 0x08:                                                  /* START has been issued */
        case 0x10:                                                  /* Repeated START has been issued */
            port->REG->DAT = port->address;
            break;

        case 0x18:                                                  /* SLA+W has been transmitted. ACK received. */
        case 0x28:                                                  /* Data byte transmitted. ACK received. */
            port->REG->CONCLR = 0x20;
            if (port->idx < port->nbytes) {
                port->REG->DAT = ((BYTE*)port->data)[port->idx++];  /* Send another data byte */
            } else {
                port->REG->CONSET = 0x10;                           /* Issue a stop condition */
                port->status = SUCCESS;
                SIGNAL_Set(&port->signals, SIGNAL_0);
            }
            port->REG->CONSET = 0x4;
            break;

        case 0x40:                                                  /* SLA+R has been transmitted. ACK received. */
            port->REG->CONCLR = 0x20;
            if (port->idx < (port->nbytes - 1)) {
                port->REG->CONSET = 0x4;                            /* More bytes to receive; return ACK */
            } else {
                port->REG->CONCLR = 0x4;                            /* Last byte to receive; return NAK */
            }
            break;

        case 0x50:                                                  /* Data byte received. ACK returned. */
        case 0x58:                                                  /* Data byte received. NAK returned. */
            ((BYTE*)port->data)[port->idx++] = port->REG->DAT;
            if (port->idx >= port->nbytes) {
                port->REG->CONCLR = 0x4;                            /* Receive completed */
                port->REG->CONSET = 0x10;                           /* Issue a stop condition */

                port->status = SUCCESS;
                SIGNAL_Set(&port->signals, SIGNAL_0);
            } else {
                if (port->idx < (port->nbytes - 1)) {
                    port->REG->CONSET = 0x4;                        /* More bytes to receive; return ACK */
                } else {
                    port->REG->CONCLR = 0x4;                        /* Last byte to receive; return NAK */
                }
            }
            break;

        case 0x20:                                                  /* SLA+W has been transmitted. NAK received. */
        case 0x30:                                                  /* Data byte transmitted. NAK received */
            port->REG->CONSET = 0x10;                               /* Issue a stop condition */
            port->REG->CONCLR = 0x4;
            port->status = ERR_DEVICENAK;
            SIGNAL_Set(&port->signals, SIGNAL_0);
            break;

        default:
            port->REG->CONSET = 0x10;                               /* Issue a stop condition */
            port->REG->CONCLR = 0x4;
            port->status = ERR_INCOMPLETE;
            SIGNAL_Set(&port->signals, SIGNAL_0);
            break;

    }
    
    port->REG->CONCLR = 0x8;                                        /* Clear the interrupt */
}
